--- a/style.css
+++ b/style.css
@@ -289,6 +289,7 @@ section
   padding: 10px;
   border-radius: 5px;
   cursor: pointer;
+
 }
 #calendar table td:hover
 {
@@ -323,9 +324,10 @@ color: red;
 .dycalendar-prev-next-btn.prev-btn:active,
 .dycalendar-prev-next-btn.next-btn:active
 {   
+  font-size: 1.4rem;
   font-weight: bold;
   cursor: pointer;
-  color:#62BB47;;
+  color:maroon;
 }
 
 .dycalendar-prev-next-btn.prev-btn,
@@ -380,10 +382,6 @@ color: red;
   font-weight: bold;
 }
 
-.dycalendar-month-container:active {
-cursor: pointer;
-color:#62BB47;;
-}
 .dycalendar-month-container div{
   padding : 0;
   margin-bottom : 10px;
@@ -418,7 +416,7 @@ color:#62BB47;;
 
 .dycalendar-month-container .dycalendar-today-date,
 .dycalendar-month-container .dycalendar-target-date {
-  background-color: red !important;
-  color : #fff !important;
-  border-radius: 2px;
+    background-color: red;
+    color : #fff;
+    border-radius: 2px;
 }
