--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
   margin: 0;
   padding: 0;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
  font-family: -apple-system, BlinkMacSystemFont, arial;
  line-height: 1.4;
@@ -106,7 +108,6 @@ input[type="checkbox"] {
 form {
   width: 100%;
   display: flex;
-  justify-content: space-between;
 }
 
 input[type="text"] {
@@ -117,7 +118,6 @@ input[type="text"] {
   border-radius: 20px !important;
   border: 3px solid !important;
   font-size: 25px;
-  margin-top: 1%;
   background-color: transparent;
   transition: 0.2s;
 }
@@ -149,7 +149,7 @@ input[type="text"] {
   backdrop-filter: blur(100px); 
   opacity: 100%;
   width:100%;
-  height: 80px;
+  height: 60px;
   position:fixed;
   padding-top: 20px;
   background-color:#eee;
@@ -166,7 +166,7 @@ input[type="text"] {
   width: 100%;
   transition: 0.3s;
   background-color: transparent;
-  height: 220px;
+  height: 215px;
   -webkit-user-select:none;
 }
 
@@ -185,6 +185,7 @@ input[type="text"] {
 #clock, #date {
   float: right;
   transition: 0.2s;
+  cursor: pointer;
 }
 
 /*Menu*/
@@ -216,7 +217,7 @@ backdrop-filter: blur(100px);
 cursor:auto;
 }
 
-.openbtn {
+/*.openbtn {
   background-color: transparent;
   border-color: transparent;
   z-index: 11;
@@ -230,11 +231,8 @@ cursor:auto;
   padding-top: 25px;
   cursor: pointer;
 }
+<button class="openbtn" id="openbtn" onclick="openNav()">&#128467;</button> */
 
-#main {
-  transition: margin-left .5s;
-  padding: 16px;
-}
 
 @media screen and (max-height: 450px) {
   .sidebar {padding-top: 15px;}
@@ -320,18 +318,11 @@ color: red;
 }
 
 .dycalendar-prev-next-btn.prev-btn:hover,
-.dycalendar-prev-next-btn.next-btn:hover
+.dycalendar-prev-next-btn.next-btn:hover,.dycalendar-prev-next-btn.prev-btn:active,
+.dycalendar-prev-next-btn.next-btn:active
 {   
   color:red;
   cursor: pointer;
-}
-
-.dycalendar-prev-next-btn.prev-btn:active,
-.dycalendar-prev-next-btn.next-btn:active
-{   
-  font-weight: bold;
-  cursor: pointer;
-  color:#62BB47;;
 }
 
 .dycalendar-prev-next-btn.prev-btn,
@@ -388,7 +379,6 @@ color: red;
 
 .dycalendar-month-container:active {
 cursor: pointer;
-color:#62BB47;;
 }
 .dycalendar-month-container div{
   padding : 0;
@@ -417,6 +407,11 @@ color:#62BB47;;
   margin : 5px;
   cursor : pointer;
 }
+  
+.dycalendar-month-container:hover .dycalendar-span-month-year:hover,.dycalendar-month-container:active .dycalendar-span-month-year:active {
+  color:red;
+  cursor: pointer;
+}
 
 .dycalendar-month-container .dycalendar-body table tr td {
   padding : 5px;
@@ -427,4 +422,25 @@ color:#62BB47;;
   background-color: red !important;
   color : #fff !important;
   border-radius: 2px;
+}
+
+/*Top button*/
+#topBtn {
+  position: fixed;
+  height: 20px;
+  width: 20px;
+  bottom: 20px;
+  right: -60px;
+  z-index: 10;
+  font-size: 30px;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 100% !important;
+  box-shadow: 0 0 10px  rgba(0,0,0,0.6);
+  border: 0px;
+  transition: 0.2s;
+}
+a {
+  text-decoration: none;
+  color: blue !important;
 }
