--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ input[type="text"] {
   width:100%;
   height: 60px;
   position:fixed;
-  padding-top: 20px;
+  padding-top: 40px;
   background-color:#eee;
   text-align:center;
   font-size: 90px; 
@@ -436,11 +436,7 @@ cursor: pointer;
   cursor: pointer;
   padding: 15px;
   border-radius: 100% !important;
-  box-shadow: 0 0 10px  rgba(0,0,0,0.6);
+  box-shadow: 0 0 10px  rgba(0, 0, 0, 19);
   border: 0px;
   transition: 0.2s;
-}
-a {
-  text-decoration: none;
-  color: blue !important;
 }
