--- a/style.css
+++ b/style.css
@@ -3,12 +3,11 @@
   margin: 0;
   padding: 0;
 }
-html {
-  scroll-behavior: smooth;
-}
+
 body {
  font-family: -apple-system, BlinkMacSystemFont, arial;
  line-height: 1.4;
+ scroll-behavior: smooth;
 }
 
 .listbox {
@@ -108,6 +107,7 @@ input[type="checkbox"] {
 form {
   width: 100%;
   display: flex;
+  justify-content: space-between;
 }
 
 input[type="text"] {
@@ -116,8 +116,9 @@ input[type="text"] {
   width: 90%;
   padding: 1%;
   border-radius: 20px !important;
-  border: 3px solid !important;
+  border: 3px solid;
   font-size: 25px;
+  margin-top: 1%;
   background-color: transparent;
   transition: 0.2s;
 }
@@ -149,9 +150,9 @@ input[type="text"] {
   backdrop-filter: blur(100px); 
   opacity: 100%;
   width:100%;
-  height: 60px;
+  height: 80px;
   position:fixed;
-  padding-top: 40px;
+  padding-top: 20px;
   background-color:#eee;
   text-align:center;
   font-size: 90px; 
@@ -166,8 +167,7 @@ input[type="text"] {
   width: 100%;
   transition: 0.3s;
   background-color: transparent;
-  height: 215px;
-  -webkit-user-select:none;
+  height: 220px;
 }
 
 /*Clock*/
@@ -424,11 +424,15 @@ cursor: pointer;
   border-radius: 2px;
 }
 
+a {
+  text-decoration: none;
+}
+
 /*Top button*/
 #topBtn {
   position: fixed;
-  height: 20px;
-  width: 20px;
+  height: 20px !important;
+  width: 20px !important;
   bottom: 20px;
   right: -60px;
   z-index: 10;
@@ -436,7 +440,12 @@ cursor: pointer;
   cursor: pointer;
   padding: 15px;
   border-radius: 100% !important;
-  box-shadow: 0 0 10px  rgba(0, 0, 0, 19);
-  border: 0px;
-  transition: 0.2s;
+  box-shadow: 0 0 8px  rgba(0, 0, 0, 19) !important;
+  border: 0px !important;
+  transition: 0.2s !important;
+}
+
+.version {
+  padding-top: 90px;
+  font-size: 15px;
 }
